Code editor: fix layout of the area designer and virtual area mapper to prevent overlap with coordiante rules Property grid: fix when more then one property grid existing at once

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -552,8 +552,8 @@ cause test to be brighter but more bold looking
 .map-container {
     box-sizing: border-box;
     position: absolute;
-    left: 30px;
-    top: 30px;
+    left: 32px;
+    top: 32px;
     bottom: 0;
     overflow: auto;
     background-color: white;
